<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMemberActivity"
    android:orientation="vertical">


    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_bright"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/party_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:hint="@string/party_name_hint"
            android:autofillHints="@string/party_name_hint_fill"
            android:inputType="text"/>
    </Toolbar>

    <Button
        android:id="@+id/button_add"
        android:background="@drawable/round_primary"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/add_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableEnd="@drawable/ic_add" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:paddingStart="1dp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/name"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/paid_amount"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:paddingStart="1dp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/change_amount"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_list_mem"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_calculating"
            android:background="@drawable/round_primary"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/calculating_button"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/average_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_submit_list"
        android:background="@drawable/round_primary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/save"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>