<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGroceryActivity"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_bright"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button_add_item"
        android:background="@drawable/round_primary"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/add_button"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="1dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:paddingStart="1dp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/item"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/item_price"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll_list_grocery"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:id="@+id/layout_list_grocery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_total_amount_item"
            android:background="@drawable/round_primary"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/total_amount"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/total_amount_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_submit_list"
        android:background="@drawable/round_primary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/save"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>